hard-gists/2838603/run.log
=== Docker Run Log for 2838603 ===
Started at: Mi 29. Okt 13:17:49 CET 2025

[2025-10-29 13:17:49] START: Running container for 2838603
[2025-10-29 13:17:49] SUCCESS: Container 3caacbe5b78ce9c05a2096ad031b3e696af0b26047a6ca396d1787f3b8f75b6e started for 2838603
=== Container logs for 2838603 ===
  File "/snippet.py", line 101
    print "from %s to %s: %f" % (from_point.wkt, to_point.wkt, dist.meters)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2838603 ===
[2025-10-29 13:17:51] INFO: Container 3caacbe5b78ce9c05a2096ad031b3e696af0b26047a6ca396d1787f3b8f75b6e has stopped
